<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".Chat_Bot"
    android:background="@drawable/twigs"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="AI Chat"
        android:textColor="@color/Purple"
        android:textSize="40sp"
        android:textStyle="bold" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connect"
        android:id="@+id/bt1" />
    <EditText
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:hint="what do you need help with?"
        android:textSize="20dp"
        android:textColor="@color/Black"
        android:id="@+id/et2" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send request"
        android:id="@+id/bt2" />



    <ScrollView
        android:id="@+id/messagesScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/messagesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tx1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="The Conversation will appear here:\n"
                android:textSize="20dp" />
        </LinearLayout>

    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>