...
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:orientation="vertical">

    <!-- Username Input -->
    <EditText
        android:id="@+id/et1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter your username"
        android:textColor="@color/Black"
        android:textSize="20sp"/>

...
